Partial_14Dec2021/force-app/main/default/objects/Redemption__c/Redemption__c.object-meta.xml
<CustomObject>
    <label>Redemption</label>
    <nameField>
        <label>Redemption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Redemptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>