Partial_14Dec2021/force-app/main/default/objects/Redemption__c/fields/Redemption_partner__c.field-meta.xml
<CustomField>
    <fullName>Redemption_partner__c</fullName>
    <label>Redemption partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>