Partial_14Dec2021/force-app/main/default/objects/Redemption__c/fields/Redemption_Product__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Redemption Product</label>
    <referenceTo>Redemption_Product__c</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <type>Lookup</type>
</CustomField>