Partial_14Dec2021/force-app/main/default/objects/Redemption__c/fields/Transaction_status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_status__c</fullName>
    <formula>TEXT ( Transaction__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction status</label>
    <type>Text</type>
</CustomField>