Partial_14Dec2021/force-app/main/default/objects/Redemption__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT ( Transaction__r.Type__c )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>