Partial_14Dec2021/force-app/main/default/objects/Redemption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Redemption_Order__c</columns>
    <columns>Redemption_partner__c</columns>
    <columns>Redemption_Product__c</columns>
    <columns>Transaction__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>